Fix: Now the loop of institutes and researchers when building the institute graph doesn't count the last researcher in the next iterations